--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,11 +10,6 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <app-root></app-root>
-    <script type="text/javascript" src="inline.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.bundle.js"></script>
-    <script type="text/javascript" src="styles.bundle.js"></script>
-    <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script>
-</body>
+<app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
